<resources>
    <string name="app_name">Student Application</string>
    <string name="school_cap">School Cap</string>
    <string name="all_Terms">Terms</string>
    <string name="all_Courses">Courses</string>
    <string name="all_Assessments">Assessments</string>
    <string name="school_Name">Pylant Academy</string>
    <string name="divider">  -  </string>
    <string name="add_button">Add Button</string>
    <string name="assessment_name">Assessment Name</string>
    <string name="course">Course</string>
    <string name="assessment_type">Assessment Type</string>
    <string name="deadline">Deadline</string>
    <string name="course_name">Course Name</string>
    <string name="term">Term</string>
    <string name="instructor_name">Instructor Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="instructor_e_mail">Instructor E-mail</string>
    <string name="instructor_phone">Instructor Phone</string>
    <string name="course_notes">Course Notes</string>
    <string name="course_status">Course Status</string>
    <string name="refresh">Refresh</string>
    <string name="term_name">Term Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="channel_name">Channel Name</string>
    <string name="channel_description">Channel Description</string>
    <string name="notification">Set Assessment End Reminder</string>
    <string-array name="Assessment_Types">
        <item>Objective</item>
        <item>Performance</item>
    </string-array>
    <string-array name="Course_Status">
        <item>Dropped</item>
        <item>Plan to Take</item>
        <item>In-Progress</item>
        <item>Completed</item>
    </string-array>
</resources>